Version 5.6.0 - 2020-05-04
* Bug fixes (see mercurial logs for details)
* Add employee on subscriptions for some states
* Use greatest end date of lines for closed date
* Add contact and invoice party on subscription
* Allow invoices to be created in advance

Version 5.4.0 - 2019-11-04
* Bug fixes (see mercurial logs for details)
* Allow lines to be finished before next consumption
* Allow services to be deactivated

Version 5.2.0 - 2019-05-06
* Bug fixes (see mercurial logs for details)
* Use ir.calendar.day

Version 5.0.0 - 2018-10-01
* Bug fixes (see mercurial logs for details)
* Remove support for Python 2.7
* Make start date of line required
* Make description on subscription line optional

Version 4.8.0 - 2018-04-23
* Bug fixes (see mercurial logs for details)
* Check pending subscription to erase party

Version 4.6.0 - 2017-10-30
* Bug fixes (see mercurial logs for details)

Version 4.4.0 - 2017-05-01
* Initial release