@@ -1,3 +1,5 @@
+* Rename subscription state from canceled to cancelled
+
 Version 5.6.0 - 2020-05-04
 * Bug fixes (see mercurial logs for details)
 * Add employee on subscriptions for some states
